# skillopt-qa

./: .env.example  .gitignore  README.md  pyproject.toml
configs/hotpotqa/: default.yaml
scripts/: download_data.py  train.py
skillopt/: agent.py  config.py  data.py  evaluator.py  llm.py  optimizer.py  trainer.py
tests/: test_config.py  test_data.py  test_evaluator.py  test_trainer_functional.py
