[project]
name = "skillopt-qa"
version = "0.1.0"
description = "A minimal, faithful re-implementation of Microsoft SkillOpt: a text-space optimizer that trains a reusable natural-language skill for a frozen LLM agent on the HotpotQA multi-hop QA task."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "joshhu" }]
dependencies = [
    "openai>=1.40.0",
    "datasets>=2.19.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
# vLLM is heavy and platform-sensitive on arm64; install/serve it separately.
# See scripts/serve_vllm.sh. Listed here only as a convenience extra.
serve = ["vllm>=0.6.0"]

[project.scripts]
skillopt-download = "scripts.download_data:main"
skillopt-train = "scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skillopt", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
